2011-05-06  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: add a workaround for automake bug#8485
	* tests/yacc-d-cxx.test (Makefile.am): Add temporary workaround
	for automake bug#8485.  The bug is still exposed by the testcase
	'yacc-dist-nobuild-subdir.test'.

2011-05-04  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: add a couple of inter-tests reference
	* tests/yacc-nodist.test, tests/pr204.test: These tests are
	related, so add references to each other in heading comments.

2011-05-04  Stefano Lattarini  <stefano.lattarini@gmail.com>

	lex tests: require just `lex' instead of `flex'
	* tests/lex-subobj-nodep.test ($required): Require `lex',
	not `flex', as this test is expected to work with any lex
	implementation.
	* tests/silent-lex.test: Likewise.

2011-05-04  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests defs: use `skip_' for skipping yacc/lex related tests
	* tests/defs.in (lex, bison): Use `skip_' to signal test skipping.

2011-05-04  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests defs: merge cleanup
	* tests/defs.in (flex, bison): Requirements removed, we have real
	`lex' and `yacc' requirements now.

2011-05-04  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests defs: allow requirements for compilers (mostly dummy)
	Most of the new requirements that are now accepted in `$required'
	as consequence of this patch are still dummy.  They are planned
	to be implemented only in master (or in some derived branch), but
	having them here (even just as no-op) will allow for an easier
	integration/backporting of potential new testcases.
	* tests/defs.in (cc, c++, fortran, fortran77): New requirements,
	still dummy.
	(flex): New requirement, picking LEX for configure.
	(lex): New requirement, alias for `flex'.  A more appropriate
	implementation, looking for a generic `lex' program, will follow
	in the future.
	(yacc): New requirement, alias for `bison'.  A more appropriate