@@ -1,3 +1,11 @@
+2011-05-13  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	yacc tests: "make clean" removes C++ files from non-distributed .y
+	* tests/yacc-clean-cxx.test: New test, sister of `yacc-clean.test'.
+	* tests/yacc-clean.test: Update heading comment to reference the
+	new sister test.
+	* tests/Makefile.am (TESTS): Update.
+
 2011-05-06  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
 	tests: add a workaround for automake bug#8485
